[gd_scene load_steps=2 format=2]

[ext_resource path="res://Units/Barrels/Barrel.gd" type="Script" id=1]

[node name="Barrel" type="Node2D"]
script = ExtResource( 1 )

[node name="Visual" type="Sprite" parent="."]
rotation = -1.5708

[node name="Reload" type="Timer" parent="."]

[node name="Range" type="Area2D" parent="."]

[node name="Circle" type="CollisionShape2D" parent="Range"]

[node name="BarrelEnds" type="Node2D" parent="."]
[connection signal="timeout" from="Reload" to="." method="_on_Reload_timeout"]
[connection signal="area_entered" from="Range" to="." method="_on_Range_area_entered"]
[connection signal="area_exited" from="Range" to="." method="_on_Range_area_exited"]
